--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "core-js": "^3.6.4",
     "mdi": "^2.2.43",
     "vue": "^2.6.11",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
