--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "facebook-login-vuejs": "^2.1.3",
     "mdi": "^2.2.43",
     "vue": "^2.6.11",
     "vue-resource": "^1.5.1",
