--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "core-js": "^3.6.4",
     "facebook-login-vuejs": "^2.1.3",
     "mdi": "^2.2.43",
+    "moment-duration-format": "^2.3.2",
     "regenerator-runtime": "^0.13.3",
     "vue": "^2.6.11",
     "vue-facebook-login-component": "^1.4.1",
+    "vue-moment": "^4.1.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.6",
     "vuetify": "^2.2.11",
