--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-moment": "^4.1.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.6",
+    "vue-session": "^1.0.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
